force-app/main/default/objects/Materiality_Assessment__c/Materiality_Assessment__c.object-meta.xml
<CustomObject>
    <label>Materiality Assessment</label>
    <pluralLabel>Materiality Assessments</pluralLabel>
    <nameField>
        <displayFormat>MA-{0000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>