force-app/main/default/objects/Materiality_Assessment__c/fields/Affected_Systems__c.field-meta.xml
<CustomField>
    <fullName>Affected_Systems__c</fullName>
    <label>Affected Systems</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>