force-app/main/default/objects/Materiality_Assessment__c/fields/AG_Delay_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>AG_Delay_Duration_Days__c</fullName>
    <label>AG Delay Duration (Days)</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>