force-app/main/default/objects/Materiality_Assessment__c/fields/AG_Delay_Granted__c.field-meta.xml
<CustomField>
    <fullName>AG_Delay_Granted__c</fullName>
    <label>AG Delay Granted</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>