force-app/main/default/objects/Materiality_Assessment__c/fields/AG_Delay_Requested__c.field-meta.xml
<CustomField>
    <fullName>AG_Delay_Requested__c</fullName>
    <label>AG Delay Requested</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>