force-app/main/default/objects/Materiality_Assessment__c/fields/Determination_Date__c.field-meta.xml
<CustomField>
    <fullName>Determination_Date__c</fullName>
    <label>Determination Date</label>
    <type>DateTime</type>
</CustomField>