force-app/main/default/objects/Materiality_Assessment__c/fields/Determination_Result__c.field-meta.xml
<CustomField>
    <fullName>Determination_Result__c</fullName>
    <label>Determination Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Material</fullName><default>false</default><label>Material</label></value>
            <value><fullName>Not_Material</fullName><default>false</default><label>Not Material</label></value>
            <value><fullName>Under_Review</fullName><default>false</default><label>Under Review</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>