force-app/main/default/objects/Materiality_Assessment__c/fields/Discovery_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Date__c</fullName>
    <label>Discovery Date</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>