force-app/main/default/objects/Materiality_Assessment__c/fields/Filing_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Filing_Deadline__c</fullName>
    <label>Filing Deadline</label>
    <type>DateTime</type>
</CustomField>