force-app/main/default/objects/Materiality_Assessment__c/fields/Financial_Impact__c.field-meta.xml
<CustomField>
    <fullName>Financial_Impact__c</fullName>
    <label>Financial Impact</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>