force-app/main/default/objects/Materiality_Assessment__c/fields/Remediation_Status__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Status__c</fullName>
    <label>Remediation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not_Started</fullName><default>false</default><label>Not Started</label></value>
            <value><fullName>In_Progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Verified</fullName><default>false</default><label>Verified</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>