force-app/main/default/objects/Materiality_Assessment__c/fields/Reputational_Impact__c.field-meta.xml
<CustomField>
    <fullName>Reputational_Impact__c</fullName>
    <label>Reputational Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>None</fullName><default>false</default><label>None</label></value>
            <value><fullName>Minor</fullName><default>false</default><label>Minor</label></value>
            <value><fullName>Moderate</fullName><default>false</default><label>Moderate</label></value>
            <value><fullName>Significant</fullName><default>false</default><label>Significant</label></value>
            <value><fullName>Severe</fullName><default>false</default><label>Severe</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>