force-app/main/default/objects/Materiality_Assessment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>false</default><label>Draft</label></value>
            <value><fullName>Under_Review</fullName><default>false</default><label>Under Review</label></value>
            <value><fullName>Determined</fullName><default>false</default><label>Determined</label></value>
            <value><fullName>Filed</fullName><default>false</default><label>Filed</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>